fix: change main test script to read from env

--- a/.env.test
+++ b/.env.test
@@ -2,7 +2,7 @@
 # Reemplaza la URL con la URL de tu servicio desplegado en Render
 
 # URL del servicio de usuarios en producción
-PRODUCTION_API_URL=https://user-service-oykz.onrender.com
+PRODUCTION_API_URL=https://taller1-g43w.onrender.com
 
 # URLs alternativas en caso de tener otros servicios
 # STAGING_API_URL=https://staging-user-service.onrender.com
